--- a/BDD-SpecFlow/BDD-SpecFlow.csproj
+++ b/BDD-SpecFlow/BDD-SpecFlow.csproj
@@ -54,14 +54,13 @@
       <DependentUpon>ATM-test.feature</DependentUpon>
     </Compile>
     <Compile Include="ATM_TestSteps.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpecFlowFeature1.feature.cs">
+    <Compile Include="SimpleCalculator.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SpecFlowFeature1.feature</DependentUpon>
+      <DependentUpon>SimpleCalculator.feature</DependentUpon>
     </Compile>
-    <Compile Include="SpecFlowFeature1Steps.cs" />
+    <Compile Include="SimpleCalculatorSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -70,9 +69,9 @@
       <LastGenOutput>ATM-test.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
-    <None Include="SpecFlowFeature1.feature">
+    <None Include="SimpleCalculator.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>SpecFlowFeature1.feature.cs</LastGenOutput>
+      <LastGenOutput>SimpleCalculator.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
